--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,8 @@
 
   {% include head.html %}
 
-<body>
-  <main class="page-content" aria-label="Content">
+<body style="max-height:100vh;">
+  <main class=" flex flex-column; page-content" aria-label="Content">
     <div id="bg" style="margin: 0;
   padding: 0; background: url({{site.url}}/images/background.jpg) center fixed no-repeat;
     -moz-background-size: cover;
