--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   {% include head.html %}
 
 <body style="max-height:100vh;">
-  <main class=" flex flex-column; page-content" aria-label="Content">
+  <main class=" flex flex-column page-content" aria-label="Content">
     <div id="bg" style="margin: 0;
   padding: 0; background: url({{site.url}}/images/background.jpg) center fixed no-repeat;
     -moz-background-size: cover;
